feat: add admin vocabulary editing APIs
