# src/main/java/com/japaneselearning/vocabulary/admin/dto/VocabularyEditResult.java
@@ -1,8 +1,0 @@
-package com.japaneselearning.vocabulary.admin.dto;
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-import org.eclipse.microprofile.openapi.annotations.media.Schema;
-
-@Schema(name = "EditResult")
-public record VocabularyEditResult(@JsonProperty("id") Long editedResourceId) {
-}
